--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,7 +12,7 @@
 						<h2>Bienvenue sur</h2>
 						<h1>BinMart</h1>
 						<p>
-							BookitOn vous permet de trouvez le prix d'un arcticle ( robe,chaussure,sandales,... ) que vous
+							BinMart vous permet de trouvez le prix d'un arcticle ( robe,chaussure,sandales,... ) que vous
 							cherchez et son point de ventes ,puis facilement vous pouvez vous rendre sur place pour vous le procurer
 						</p>
 					</article>				
